@@ -39,6 +39,8 @@ All Issues:
   * [MESOS-7265] - Containerizer startup may cause sensitive data to leak into sandbox logs.
   * [MESOS-7366] - Agent sandbox gc could accidentally delete the entire persistent volume content.
   * [MESOS-7383] - Docker executor logs possibly sensitive parameters.
+  * [MESOS-7350] - Failed to pull image from Nexus Registry due to signature missing.
+  * [MESOS-5028] - Copy provisioner cannot replace directory with symlink.
 
 
 Release Notes - Mesos - Version 1.2.0
@@ -484,8 +486,11 @@ All Issues:
 ** Bug
   * [MESOS-2537] - AC_ARG_ENABLED checks are broken.
   * [MESOS-7237] - Enabling cgroups_limit_swap can lead to "invalid argument" error.
+  * [MESOS-7265] - Containerizer startup may cause sensitive data to leak into sandbox logs.
   * [MESOS-7366] - Agent sandbox gc could accidentally delete the entire persistent volume content.
   * [MESOS-7383] - Docker executor logs possibly sensitive parameters.
+  * [MESOS-7350] - Failed to pull image from Nexus Registry due to signature missing.
+  * [MESOS-5028] - Copy provisioner cannot replace directory with symlink.
 
 
 Release Notes - Mesos - Version 1.1.1
@@ -933,6 +938,7 @@ All Issues:
     * [MESOS-2537] - AC_ARG_ENABLED checks are broken
     * [MESOS-6606] - Reject optimized builds with libcxx before 3.9
     * [MESOS-7008] - Quota not recovered from registry in empty cluster.
+    * [MESOS-7265] - Containerizer startup may cause sensitive data to leak into sandbox logs.
     * [MESOS-7366] - Agent sandbox gc could accidentally delete the entire persistent volume content.
     * [MESOS-7383] - Docker executor logs possibly sensitive parameters.
 
